--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-all: ../testLCD ../testEncoder  ../testRotary ../pixie 
+all: ../pixie 
 
 OSC_CFLAGS=-DOSCILLATOR_Z -DOSCILLATOR_D
 CXXFLAGS = -std=c++11 -Wall -g -O2 -Wno-unused-variable
@@ -15,24 +15,9 @@ CC = cc
 ../pixie : pixie/pixie.cpp /home/pi/librpitx/src/librpitx.a pixie/LCDLib.h pixie/VFOSystem.h pixie/ClassMenu.h
 	$(CCP) $(CXXFLAGS) -o ../pixie ./pixie/pixie.cpp  $(LIBRPITX)
 
-../testLCD : testLCD/testLCD.c 
-	$(GCC) -o ../testLCD ./testLCD/testLCD.c $(LDFLAGS)
-
-../testRotary : testRotary/testRotary.c
-	$(GCC) -o ../testRotary ./testRotary/testRotary.c $(LDFLAGS)
-
-../testEncoder : testEncoder/testEncoder.c
-	$(GCC) -o ../testEncoder ./testEncoder/testEncoder.c $(LDFLAGS)
-
     
 clean:
-	rm -f  ../testLCD 
-	rm -r  ../testEncoder
-	rm -r  ../testRotary
-	rm -r  ../tune
+        rm -r  ../pixie
 
 install: all
-	install -m 0755 ../testLCD /usr/bin
-	install -m 0755 ../testEncoder /usr/bin
-	install -m 0755 ../testRotary /usr/bin
-	install -m 0755 ../tune /usr/bin
+        install -m 0755 ../pixie /usr/bin
