--- a/src/Makefile
+++ b/src/Makefile
@@ -13,8 +13,8 @@ CC = cc
 ../bin/PiWSPR : PiWSPR/PiWSPR.cpp /home/pi/librpitx/src/librpitx.a lib/DDS.h ./PiWSPR/PiWSPR.h lib/WSPR.h
 	$(CCP) $(CXXFLAGS) -o ../bin/PiWSPR ./PiWSPR/PiWSPR.cpp  ./PiWSPR/PiWSPR.h lib/WSPR.h $(LDFLAGS) $(LIBRPITX)
  
-../bin/pixie : pixie/pixie.cpp /home/pi/librpitx/src/librpitx.a lib/LCDLib.h lib/VFOSystem.h lib/ClassMenu.h pixie/pixie.h lib/gui.h lib/CAT817.h lib/DDS.h iambic/iambic.c
-	$(CCP) $(OSC_CFLAGS) -o ../bin/pixie ./pixie/pixie.cpp  $(LIBRPITX)
+../bin/pixie : pixie/pixie.cpp /home/pi/librpitx/src/librpitx.a lib/LCDLib.h lib/VFOSystem.h lib/ClassMenu.h pixie/pixie.h lib/gui.h lib/CAT817.h lib/DDS.h iambic/iambic.c minIni/minIni.c  minIni/minIni.h log.c/log.c log.c/log.h
+	$(CCP) $(OSC_CFLAGS) -o ../bin/pixie ./pixie/pixie.cpp ./minIni/minIni.c  ./log.c/log.c $(LIBRPITX)
 
 ../bin/DDSPi : DDSPi/DDSPi.cpp /home/pi/librpitx/src/librpitx.a DDSPi/DDSPi.h lib/CAT817.h lib/DDS.h
 	$(CCP) $(CXXFLAGS) -o ../bin/DDSPi ./DDSPi/DDSPi.cpp  $(LIBRPITX)
