--- a/src/pixie/pixie.cfg
+++ b/src/pixie/pixie.cfg
@@ -6,7 +6,7 @@
 VFO_BAND_START=3
 VFO_START=7000000
 VFO_END=7200000
-VFOA=7084000
+VFOA=7074000
 VFOB=7000000
 AB=0
 VFO_STEP=100
@@ -24,13 +24,15 @@ SPLIT=0
 PPM=1000
 GPIO=4
 DDSPOWER=7
-;TXONLY=1
+TXONLY=0
+PTT=12
 
 [CAT]
 PORT=/tmp/ttyv1
 BAUD=4800
 
 [KEYER]
+KEYER_BRK=0
 KEYER_MODE=0
 KEYER_SPEED=20
 SND_DEV=hw:0
