--- a/src/pixie/pixie.cfg
+++ b/src/pixie/pixie.cfg
@@ -6,7 +6,7 @@
 VFO_BAND_START=3
 VFO_START=7000000
 VFO_END=7200000
-VFOA=7074000
+VFOA=7032000
 VFOB=7000000
 AB=0
 VFO_STEP=100
@@ -23,7 +23,7 @@ SPLIT=0
 [DDS]
 PPM=1000
 GPIO=4
-DDSPOWER=7
+MAXLEVEL=1
 TXONLY=0
 PTT=12
 
@@ -39,7 +39,7 @@ SND_DEV=hw:0
 KEYER_SIDETONE_FREQUENCY=600
 KEYER_SIDETONE_GAIN=0
 KEYER_SIDETONE=ENVELOPE=5
-KEYER_SIDETONE_GPIO=0
+KEYER_SIDETONE_GPIO=19
 KEYER_SPACING=0
 KEYER_ACTIVE_STATE=0
 
