--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-all: ../bin/pixie ../bin/DDSPi ../bin/OT817 ../bin/PiWSPR ../bin/pirtty  
+all: ../bin/pixie ../bin/DDSPi  ../bin/PiWSPR ../bin/PiRTTY 
 
 OSC_CFLAGS=-DOSCILLATOR_Z -DOSCILLATOR_D
 
@@ -11,33 +11,27 @@ CCP = c++
 CC = cc
 GCC = gcc
 
+../bin/pixie : pixie/pixie.cpp /home/pi/librpitx/src/librpitx.a lib/LCDLib.h lib/VFOSystem.h lib/CAT817.h lib/ClassMenu.h pixie/pixie.h lib/gui.h lib/DDS.h iambic/iambic.c minIni/minIni.c  minIni/minIni.h log.c/log.c log.c/log.h
+	$(CCP) $(OSC_CFLAGS) $(CXXFLAGS) -o ../bin/pixie ./pixie/pixie.cpp ./minIni/minIni.c lib/CAT817.h ./log.c/log.c $(LDFLAGS)
+
 ../bin/PiWSPR : PiWSPR/PiWSPR.cpp /home/pi/librpitx/src/librpitx.a lib/DDS.h ./PiWSPR/PiWSPR.h lib/WSPR.h
 	$(CCP) $(CXXFLAGS) -o ../bin/PiWSPR ./PiWSPR/PiWSPR.cpp  ./PiWSPR/PiWSPR.h lib/WSPR.h $(LDFLAGS)
  
-../bin/pixie : pixie/pixie.cpp /home/pi/librpitx/src/librpitx.a lib/LCDLib.h lib/VFOSystem.h lib/ClassMenu.h pixie/pixie.h lib/gui.h lib/CAT817.h lib/DDS.h iambic/iambic.c minIni/minIni.c  minIni/minIni.h log.c/log.c log.c/log.h
-	$(CCP) $(OSC_CFLAGS) $(CXXFLAGS) -o ../bin/pixie ./pixie/pixie.cpp ./minIni/minIni.c  ./log.c/log.c $(LDFLAGS)
-
 ../bin/DDSPi : DDSPi/DDSPi.cpp /home/pi/librpitx/src/librpitx.a DDSPi/DDSPi.h lib/CAT817.h lib/DDS.h
 	$(CCP) $(OSC_CFLAGS) $(CXXFLAGS) -o ../bin/DDSPi ./DDSPi/DDSPi.cpp  $(LDFLAGS)
 
-../bin/OT817 : OT817/OT817.cpp /home/pi/librpitx/src/librpitx.a OT817/OT817.h lib/CAT817.h lib/DDS.h
-	$(CCP) $(OSC_CFLAGS) $(CXXFLAGS) -o ../bin/OT817 ./OT817/OT817.cpp  $(LDFLAGS)
-
-../bin/pirtty : pirtty/pirtty.cpp  /home/pi/librpitx/src/librpitx.a
-	$(CCP) $(OSC_CFLAGS) $(CXXFLAGS) -o ../bin/pirtty pirtty/pirtty.cpp  $(LDFLAGS)
+../bin/PiRTTY : PiRTTY/PiRTTY.cpp  /home/pi/librpitx/src/librpitx.a
+	$(CCP) $(OSC_CFLAGS) $(CXXFLAGS) -o ../bin/PiRTTY PiRTTY/PiRTTY.cpp  $(LDFLAGS)
 
 
-    
 clean:
 	rm -r  ../bin/pixie
 	rm -r  ../bin/DDSPi
-	rm -r  ../bin/OT817
 	rm -r  ../bin/PiWSPR
-	rm -r  ../bin/pirtty
+	rm -r  ../bin/PiRTTY
 
 install: all
 	install -m 0755 ../bin/pixie  /usr/bin
 	install -m 0755 ../bin/DDSPi  /usr/bin
-	install -m 0755 ../bin/OT817  /usr/bin
 	install -m 0755 ../bin/PiWSPR /usr/bin
-	install -m 0755 ../bin/pirtty /usr/bin
+	install -m 0755 ../bin/PiRTTY /usr/bin
