--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-all: ../bin/pixie ../bin/PiWSPR ../bin/PiRTTY 
+all: ../bin/pixie ../bin/PiWSPR ../bin/PiRTTY ../bin/ssbvox 
 
 OSC_CFLAGS=-DOSCILLATOR_Z -DOSCILLATOR_D
 
@@ -14,6 +14,9 @@ GCC = gcc
 ../bin/pixie : pixie/pixie.cpp /home/pi/librpitx/src/librpitx.a lib/LCDLib.h lib/VFOSystem.h lib/CAT817.h lib/ClassMenu.h pixie/pixie.h lib/gui.h lib/DDS.h iambic/iambic.c minIni/minIni.c  minIni/minIni.h log.c/log.c log.c/log.h 
 	$(CCP) $(OSC_CFLAGS) $(CXXFLAGS) -o ../bin/pixie ./pixie/pixie.cpp ./minIni/minIni.c lib/CAT817.h ./log.c/log.c $(LDFLAGS)
 
+../bin/ssbvox : ssbvox/ssbvox.cpp /home/pi/librpitx/src/librpitx.a
+	$(CCP) $(CXXFLAGS) -o ../bin/ssbvox ./ssbvox/ssbvox.cpp  $(LDFLAGS)
+
 ../bin/PiWSPR : PiWSPR/PiWSPR.cpp /home/pi/librpitx/src/librpitx.a lib/DDS.h ./PiWSPR/PiWSPR.h lib/WSPR.h
 	$(CCP) $(CXXFLAGS) -o ../bin/PiWSPR ./PiWSPR/PiWSPR.cpp  ./PiWSPR/PiWSPR.h lib/WSPR.h $(LDFLAGS)
  
@@ -25,8 +28,10 @@ clean:
 	rm -r  ../bin/pixie
 	rm -r  ../bin/PiWSPR
 	rm -r  ../bin/PiRTTY
+	rm -r  ../bin/ssbvox
 
 install: all
 	install -m 0755 ../bin/pixie  /usr/bin
 	install -m 0755 ../bin/PiWSPR /usr/bin
 	install -m 0755 ../bin/PiRTTY /usr/bin
+	install -m 0755 ../bin/ssbvox /usr/bin
