--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-all: ../bin/pixie ../bin/PiWSPR ../bin/PiRTTY ../bin/ssbvox 
+all: ../bin/pixie ../bin/PiWSPR ../bin/PiRTTY ../bin/Pi4D 
 
 OSC_CFLAGS=-DOSCILLATOR_Z -DOSCILLATOR_D
 
@@ -14,8 +14,8 @@ GCC = gcc
 ../bin/pixie : pixie/pixie.cpp /home/pi/librpitx/src/librpitx.a lib/LCDLib.h lib/VFOSystem.h lib/CAT817.h lib/ClassMenu.h pixie/pixie.h lib/gui.h lib/DDS.h iambic/iambic.c minIni/minIni.c  minIni/minIni.h log.c/log.c log.c/log.h 
 	$(CCP) $(OSC_CFLAGS) $(CXXFLAGS) -o ../bin/pixie ./pixie/pixie.cpp ./minIni/minIni.c lib/CAT817.h ./log.c/log.c $(LDFLAGS)
 
-../bin/ssbvox : ssbvox/ssbvox.cpp /home/pi/librpitx/src/librpitx.a
-	$(CCP) $(CXXFLAGS) -o ../bin/ssbvox ./ssbvox/ssbvox.cpp  $(LDFLAGS)
+../bin/Pi4D : Pi4D/Pi4D.cpp /home/pi/librpitx/src/librpitx.a
+	$(CCP) $(CXXFLAGS) -o ../bin/Pi4D ./Pi4D/Pi4D.cpp  $(LDFLAGS)
 
 ../bin/PiWSPR : PiWSPR/PiWSPR.cpp /home/pi/librpitx/src/librpitx.a lib/DDS.h ./PiWSPR/PiWSPR.h lib/WSPR.h
 	$(CCP) $(CXXFLAGS) -o ../bin/PiWSPR ./PiWSPR/PiWSPR.cpp  ./PiWSPR/PiWSPR.h lib/WSPR.h $(LDFLAGS)
