--- a/src/pixie/pixie.cfg
+++ b/src/pixie/pixie.cfg
@@ -6,14 +6,14 @@
 VFO_BAND_START=3
 VFO_START=7000000
 VFO_END=7200000
-VFOA=7014000
-VFOB=7000000
+VFOA=7000800
+VFOB=7100000
 AB=0
-VFO_STEP=100
+VFO_STEP=0
 VFO_SHIFT=600
 MODE=2
-MAXRIT  =   1000
-MINRIT  =  -1000
+MAXRIT  =   900
+MINRIT  =  -900
 RITSTEP =   100
 RITSTEPD =  -100
 RIT=0
@@ -23,7 +23,7 @@ SPLIT=0
 [DDS]
 PPM=1000
 GPIO=4
-MAXLEVEL=1
+MAXLEVEL=7
 TXONLY=0
 PTT=12
 
@@ -33,7 +33,7 @@ BAUD=4800
 
 [KEYER]
 KEYER_BRK=0
-KEYER_MODE=0
+KEYER_MODE=1
 KEYER_SPEED=20
 SND_DEV=hw:0
 KEYER_SIDETONE_FREQUENCY=600
@@ -43,6 +43,7 @@ KEYER_SIDETONE_GPIO=19
 KEYER_SPACING=0
 KEYER_ACTIVE_STATE=0
 
+KEYER_ACTIVE=0
 [MISC]
 TRACE=1
 BACKLIGHT =20
