--- a/bash/PixiePi.cfg
+++ b/bash/PixiePi.cfg
@@ -4,7 +4,7 @@ BACKLIGHT=0
 [VFO]
 POWER=4800
 STEP=100
-SHIFT=-12
+SHIFT=600
 MODE=2
 F=7030000
 [CAT]
@@ -12,3 +12,4 @@ PORT=/tmp/ttyv1
 [KEYER]
 KEYER_MODE=0
 KEYER_SPEED=15
+REVERSE=0
